[package]
name = "aht20-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc-any = "2.4.1"
embedded-hal = "0.2.6"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }

[dev-dependencies]
embedded-hal-mock =  "0.8.0"
