[package]
name = "aht20-driver"
authors = ["Rikard Anglerud <rikard@anglerud.com>"]
version = "1.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["no-std", "embedded-hal-driver", "sensor", "temperature", "humidity"]
description = "Rust embedded-hal driver for the AHT20 temperature and humidity sensor."
homepage = "https://github.com/anglerud/aht20-driver"
repository = "https://github.com/anglerud/aht20-driver"
documentation = "https://docs.rs/aht20-driver"
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"

[dependencies.defmt]
version = "0.3.6"

[dependencies.crc-any]
version = "2.4.4"
default-features = false

[dev-dependencies]
embedded-hal-mock =  "0.11.1"

[dev-dependencies.defmt]
version = "0.3.6"
features = ["unstable-test"]
