[package]
name = "aht20_blue_pill_example"
version = "1.1.0"
authors = ["Rikard Anglerud <rikard@anglerud.com>"]
description = "Example for the aht20-driver crate with a Blue Pill board."
categories = ["embedded", "no-std"]
edition = "2021"

[dependencies]
aht20-driver = { path = "../.." }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-probe = { version="0.3.0", features = ["print-defmt"] }

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["rt", "stm32f103", "medium"]

[profile.release]
lto = true
codegen-units = 1
debug = true
